--- a/src/template.html
+++ b/src/template.html
@@ -46,7 +46,7 @@
     <div id="hero" class="jumbotron">
       <div class="container">
         <h1 class="hero-title" class="load-hidden">
-          Hi, my name is <span class="text-color-main">Isabeau</span>
+          <span id="greeting">Hi</span>, my name is <span class="text-color-main">Isabeau</span>
           <br />
           Welcome to my portfolio.
         </h1>
