--- a/src/index.html
+++ b/src/index.html
@@ -20,9 +20,9 @@
     <!-- Put here your site title -->
     <title>Isabeau Dekker | Developer</title>
     <!-- Add some coding keywords below, Ex: (javascript, yourusername, etc) -->
-    <meta name="keywords" content="[username], [name], skill" />
+    <meta name="keywords" content="ijmdev, Isabeau, javascript" />
     <!-- Improve your SEO by adding a small descrption of you -->
-    <meta name="description" content="[Your name here] | Developer" />
+    <meta name="description" content="Isabeau Dekker | Developer" />
 
     <!-- Required librarys -->
     <link
@@ -46,12 +46,12 @@
     <div id="hero" class="jumbotron">
       <div class="container">
         <h1 class="hero-title" class="load-hidden">
-          <span id="greeting">Hi</span>, my name is <span class="text-color-main">Isabeau</span>
+          <span id="greeting">Hi</span>, ik ben <span class="text-color-main">Isabeau</span>
           <br />
-          Welcome to my portfolio.
+          Welkom op mijn persoonlijke pagina
         </h1>
         <p class="hero-cta" class="load-hidden">
-          <a class="cta-btn cta-btn--hero" href="#about">Know more</a>
+          <a class="cta-btn cta-btn--hero" href="#about">Meer</a>
         </p>
       </div>
     </div>
@@ -181,7 +181,7 @@
           <div class="row">
             <div class="col-lg-4 col-sm-12">
               <div class="project-wrapper__text">
-                <h3 class="project-wrapper__text-title">Project Title</h3>
+                <h3 class="project-wrapper__text-title">Infinite Scroll</h3>
                 <div>
                   <p class="mb-4">
                     Lorem ipsum dolor sit, amet consectetur adipisicing elit.
