--- a/src/template.html
+++ b/src/template.html
@@ -46,7 +46,7 @@
     <div id="hero" class="jumbotron">
       <div class="container">
         <h1 class="hero-title" class="load-hidden">
-          <span id="greeting">Hi</span>, ik ben <span class="text-color-main">Isabeau</span>
+          <span id="greeting">Hoi</span>, ik ben <span class="text-color-main">Isabeau</span>
           <br />
           Welkom op mijn persoonlijke pagina
         </h1>
@@ -61,7 +61,7 @@
     <section id="about">
       <div class="container">
         <h2 class="section-title">
-          About me
+          Over mij
         </h2>
         <div class="row about-wrapper">
           <div class="col-md-6 col-sm-12">
@@ -91,7 +91,7 @@
               </p>
               <span class="d-flex mt-3">
                 <a target="_blank" class="cta-btn cta-btn--resume" href="#!">
-                  View Resume
+                  Curriculum Vitae
                 </a>
               </span>
             </div>
@@ -106,14 +106,14 @@
       <div class="container">
         <div class="project-wrapper">
           <h2 class="section-title dark-blue-text">
-            Projects
+            Projecten
           </h2>
 
           <!-- Each .row is a project -->
           <div class="row">
             <div class="col-lg-4 col-sm-12">
               <div class="project-wrapper__text">
-                <h3 class="project-wrapper__text-title">Background generator</h3>
+                <h3 class="project-wrapper__text-title">Gezichtsherkenning</h3>
                 <div>
                   <p class="mb-4">
                     Lorem ipsum dolor sit, amet consectetur adipisicing elit.
@@ -123,19 +123,19 @@
                     itaque molestiae.
                   </p>
                 </div>
-                <a target="_blank" class="cta-btn cta-btn--hero" href="https://ijmdev.github.io/zerotomastery/">
+                <a target="_blank" class="cta-btn cta-btn--hero" href="https://smartbraiinn.herokuapp.com/">
                   See Live
                 </a>
-                <a target="_blank" class="cta-btn text-color-main" href="https://github.com/ijmdev/zerotomastery">
+                <a target="_blank" class="cta-btn text-color-main" href="https://github.com/ijmdev/facerecognition">
                   Source Code
                 </a>
               </div>
             </div>
             <div class="col-lg-8 col-sm-12">
               <div class="project-wrapper__image">
-                <a href="https://ijmdev.github.io/zerotomastery/" target="_blank">
+                <a href="https://smartbraiinn.herokuapp.com/" target="_blank">
                   <div data-tilt class="thumbnail rounded">
-                    <img class="img-fluid" src="./assets/backgroundgenerator.png" />
+                    <img class="img-fluid" src="./assets/gezichtsherkenning.png"/>
                   </div>
                 </a>
               </div>
@@ -181,7 +181,7 @@
           <div class="row">
             <div class="col-lg-4 col-sm-12">
               <div class="project-wrapper__text">
-                <h3 class="project-wrapper__text-title">Infinite Scroll</h3>
+                <h3 class="project-wrapper__text-title">Background generator</h3>
                 <div>
                   <p class="mb-4">
                     Lorem ipsum dolor sit, amet consectetur adipisicing elit.
@@ -191,19 +191,19 @@
                     itaque molestiae.
                   </p>
                 </div>
-                <a target="_blank" class="cta-btn cta-btn--hero" href="#!">
+                <a target="_blank" class="cta-btn cta-btn--hero" href="https://ijmdev.github.io/zerotomastery/">
                   See Live
                 </a>
-                <a target="_blank" class="cta-btn text-color-main" href="#!">
+                <a target="_blank" class="cta-btn text-color-main" href="https://github.com/ijmdev/zerotomastery">
                   Source Code
                 </a>
               </div>
             </div>
             <div class="col-lg-8 col-sm-12">
               <div class="project-wrapper__image">
-                <a href="#!" target="_blank">
+                <a href="https://ijmdev.github.io/zerotomastery/" target="_blank">
                   <div data-tilt class="thumbnail rounded">
-                    <img class="img-fluid" src="./assets/project.jpg" />
+                    <img class="img-fluid" src="./assets/backgroundgenerator.png" />
                   </div>
                 </a>
               </div>
@@ -243,48 +243,19 @@
           <i class="fa fa-angle-up fa-2x" aria-hidden="true"></i>
         </a>
         <div class="social-links">
-          <a href="#!" target="_blank">
-            <i class="fa fa-twitter fa-inverse"></i>
-          </a>
-          <a href="#!" target="_blank">
-            <i class="fa fa-codepen fa-inverse"></i>
-          </a>
-          <a href="#!" target="_blank">
+          <a href="https://www.linkedin.com/in/isabeau-dekker-634209a5/" target="_blank">
             <i class="fa fa-linkedin fa-inverse"></i>
           </a>
-          <a href="#!" target="_blank">
+          <a href="https://github.com/ijmdev" target="_blank">
             <i class="fa fa-github fa-inverse"></i>
           </a>
         </div>
 
         <hr />
 
-        <!-- If you give me some credit, will be huge for me :) -->
         <p class="footer__text">
-          © 2020 - Template developed by <a href="https://github.com/cobidev" target="_blank">Jacobo Martínez</a>
+          © 2021 - Isabeau Dekker <a href="https://github.com/ijmdev" target="_blank"></a>
           </a>
-        </p>
-
-        <!-- Remove this paragraph once you setup your custom portfolio -->
-        <p class="mt-3 pt-3">
-          <a
-            class="github-button"
-            href="https://github.com/cobidev/simplefolio/fork"
-            data-icon="octicon-repo-forked"
-            data-size="large"
-            data-show-count="true"
-            aria-label="Fork ntkme/github-buttons on GitHub"
-            >Fork</a
-          >
-          <a
-            class="github-button"
-            href="https://github.com/cobidev/simplefolio"
-            data-icon="octicon-star"
-            data-size="large"
-            data-show-count="true"
-            aria-label="Star cobidev/simplefolio on GitHub"
-            >Star</a
-          >
         </p>
       </div>
     </footer>
