--- a/src/template.html
+++ b/src/template.html
@@ -1,14 +1,3 @@
-<!--
-  Hello!
-  -
-  Simplefolio is a clean and responsive portfolio template for Developers!
-  Created by Jacobo Martinez.
-  -
-  Github Repo: https://github.com/cobidev/simplefolio/
-  Readme: https://github.com/cobidev/simplefolio/README.md
-  -
-  For business & inquires, contact me -> jacobojavier98@gmail.com
--->
 <!DOCTYPE html>
 <html lang="en">
   <head>
@@ -17,7 +6,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="shortcut icon" type="image/png" href="./assets/favicon.png" />
 
-    <!-- Put here your site title -->
     <title>Isabeau Dekker | Developer</title>
     <!-- Add some coding keywords below, Ex: (javascript, yourusername, etc) -->
     <meta name="keywords" content="ijmdev, Isabeau, javascript" />
@@ -38,7 +26,6 @@
     <script async defer src="https://buttons.github.io/buttons.js"></script>
   </head>
 
-  <!-- Follow the HTML instructions to create your stunning portfolio website -->
   <body>
     <div id="top"></div>
 
@@ -48,10 +35,10 @@
         <h1 class="hero-title" class="load-hidden">
           <span id="greeting">Hoi</span>, ik ben <span class="text-color-main">Isabeau</span>
           <br />
-          Welkom op mijn persoonlijke pagina
+          Nieuwsgierig naar mijn portfolio?
         </h1>
         <p class="hero-cta" class="load-hidden">
-          <a class="cta-btn cta-btn--hero" href="#about">Meer</a>
+          <a class="cta-btn cta-btn--hero" href="#about">Ontdek meer</a>
         </p>
       </div>
     </div>
