--- a/src/template.html
+++ b/src/template.html
@@ -33,7 +33,7 @@
     <div id="hero" class="jumbotron">
       <div class="container">
         <h1 class="hero-title" class="load-hidden">
-          <span id="greeting">Hoi</span>, ik ben <span class="text-color-main">Isabeau</span>
+          <span id="greeting">Hoi</span>, ik ben <span class="text-color-main"><span class="_I">I</span><span class="_sa">sa</span><span class="_be">be</span><span class="_au">au</span></span>
           <br />
           Nieuwsgierig naar mijn portfolio?
         </h1>
